[package]
name = "kiero-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["minwindef", "libloaderapi", "winuser"] }

[features]
default = ["d3d9"]
d3d9 = ["winapi/d3d9"]
d3d11 = ["winapi/d3d11"]
d3d12 = ["winapi/d3d12"]
opengl = []
vulkan = []

[dev-dependencies]
libloading = "0.8.5"
